--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,7 +4,8 @@
 <h2>Comments</h2>
 <% @comments.each do |comment| %>
   <p><%= comment.content %> - <%= comment.user.email %></p>
-  <% if current_user && current_user.admin? %>
+  
+  <% if current_user&.admin? %>
     <%= link_to 'Delete', post_comment_path(@post, comment), method: :delete %>
   <% end %>
 <% end %>
