--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -19,3 +19,4 @@
 <% else %>
   <p>Please sign in to add a comment.</p>
 <% end %>
+<%= link_to 'Logout', destroy_user_session_path, method: :delete %>
